examples/test/testpolicy13575.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13575
  namespace: namespace79
spec:
  podSelector:
    matchLabels:
      key43: value44
      key46: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value35
          key25: value23
          key39: value21
      podSelector:
        matchLabels:
          key27: value26
